# challenge-pgz

./: .flake8  CONTRIBUTING.md  LICENSE  PLAN_B.md  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml  requirements.txt  wibblo.py  wibblo.spec
devops/scripts/: build.sh  print_image_size.py  release.sh  to_snake_case.py
docs/: INSTRUCTIONS.md  project-structure.md
project/: BACKLOG.md  CHANGELOG.md  OVERVIEW.md  PLAN.md  ROADMAP.md  STRATEGY.md  SUGGESTIONS.md  TODO.md
project/notes/: gdd.md  lore.md  proposal-release-cli.md
src/: ems.py  main.py  main.pyi
